# CoDoc

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirement.txt  requirements.txt  streamlit_app.py  webhook.py  worker.py
app/api/: app.py
app/utils/: db_connect.py
streamlit_ui/: app.py
workers/: worker.py
