[project]
name = "CoDoc"
version = "0.1.0"
description = "AI-powered autonomous documentation generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "gitpython>=3.1.50",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pymongo>=4.17.0",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
]
